# ProCyon

./: pyproject.toml
.procupine_venv/: pyvenv.cfg
examples/: Transformer-M.ipynb
procyon/app/: README.md  main.py
procyon/inference/: retrieval_utils.py  settings.py
procyon/model/: model_unified.py  procupine_encoder.py  procupine_model.py
procyon/training/: train_procupine.py  training_args_IT.py
scripts/: batch_script.sh  protein_retrieval_disease_pheno.py
