[project]
name = "procyon"
version = "1.0"
requires-python = "==3.11.9"
description = "A multimodal foundation model for protein phenotypes"
readme = "README.md"
dependencies = [
   "accelerate==0.27.2",
   "biopython>=1.84",
   "captum==0.7.0",
   "datasets==2.20.0",
   "deepspeed==0.12.4",
   "einops==0.7.0",
   "evaluate==0.4.2",
   "fair-esm==2.0.0",
   "goatools==1.3.11",
   "huggingface==0.0.1",
   "huggingface-hub==0.23.4",
   "ipdb==0.13.13",
   "jupyter==1.0.0",
   "kiwisolver==1.4.5",
   "llvmlite==0.42.0",
   "loguru==0.7.3",
   "matplotlib==3.8.3",
   "multiprocess==0.70.16",
   "networkx==3.2.1",
   "numpy==1.26.4",
   "pandas==2.2.2",
   "peft==0.5.0",
   "pillow==10.2.0",
   "pyarrow==16.1.0",
   "python-dotenv==1.0.1",
   "pytorch-lightning==2.2.0.post0",
   "pytorch-metric-learning==2.4.1",
   "pyyaml==6.0.1",
   "rouge-score==0.1.2",
   "sacrebleu==2.4.3",
   "sacremoses==0.1.1",
   "scikit-learn==1.4.1.post1",
   "scikit-multilearn==0.2.0",
   "scipy==1.12.0",
   "seaborn==0.13.2",
   "sentencepiece==0.1.99",
   "statsmodels==0.14.1",
   "tokenizers==0.13.3",
   "torch-geometric>=2.6.1",
   "torch==2.2.0",
   "tqdm==4.66.4",
   "transformers==4.31.0",
   "umap-learn==0.5.5",
   "virtualenv==20.28.0",
   "wandb==0.16.3",
   "bert-score>=0.3.13",
   "scanpy>=1.10.4",
]


[project.optional-dependencies]
build = ["torch", "setuptools", "packaging"]
compile = ["flash-attn"]
api = [
   "argparse>=1.4.0",
   "huggingface-hub==0.23.4",
   "fastapi>=0.109.0",
   "uvicorn>=0.27.0",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = ["torch", "einops"]
